3rd draft about me filled

--- a/index.html
+++ b/index.html
@@ -209,64 +209,70 @@
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
 									<span class="icon style2 major fa-gem"></span>
-									<h3>Lorem</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Education</h3>
+									<p>Graduated from Louisiana State University in May 2018, major in Computer Science.<br>GPA 3.62</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-save"></span>
-									<h3>Ipsum</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Relevant Course</h3>
+									<p>Computer network, 
+										<br>Software Engineering 
+										<br> Database Management System 
+										<br>umerical Method
+										<br> Calculus
+										<br>Technical Writing...
+								<br></p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-chart-bar"></span>
-									<h3>Dolor</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Software Skills</h3>
+									<p>Visual Studio Code
+										<br>HTML, CSS, Javascript
+										<br>NetBeans
+										<br>Microsoft office
+										<br>Lego Mindstorms
+										<br> Android Studio...
+									</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-wifi"></span>
-									<h3>Amet</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Languagse</h3>
+									<p>English <br> Mandarin </p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-cog"></span>
-									<h3>Magna</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Experiences</h3>
+									<p> <strong>Vex Robotic</strong>
+										<br> Design and build robots to compete against other teams in a game based engineer challenge, and presented in Academic Sumbit (University of Louisiana System)
+									</p>
 								</section>
 								<section>
 									<span class="icon style2 major fa-paper-plane"></span>
-									<h3>Tempus</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Experiences</h3>
+									<p><b>Lego Robotics Teaching Assistant</b>
+										<br>Tutored grade 3-8th students the basic ev3 programming, guide students to build basic driving and competition robots.
+									</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-desktop"></span>
-									<h3>Aliquam</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Experiences</h3>
+									<p> <b>Maths Teaching Assistant</b>
+										<br>Tutored entry level of statistic and probability course, help students learn step by step of course work problems and solutions.
+									</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-sync-alt"></span>
-									<h3>Elit</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Experiences</h3>
+									<p><b>Photographer</b>
+										<br>take and edit photos of school events to be used in school YearBook.
+									</p>
 								</section>
 								<section>
 									<span class="icon solid style2 major fa-hashtag"></span>
-									<h3>Morbi</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+									<h3>Operation System</h3>
+									<p>Windows <br> Macintosh</p>
 								</section>
-								<section>
-									<span class="icon solid style2 major fa-bolt"></span>
-									<h3>Turpis</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-envelope"></span>
-									<h3>Ultrices</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
-								<section>
-									<span class="icon solid style2 major fa-leaf"></span>
-									<h3>Risus</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+								
 							</div>
 						</div>
 					</section>
