--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 								
 								<article>
 									<a href="images/gallery/IMG_0692.jpg" class="image">
-										<img src="images/gallery/IMG_0692.jpg" alt="" />
+										<img src="images/gallery/IMG_0692 1.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Tabby Cat</h3>
