test img change

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 
 								
 								<article>
-									<a href="images/gallery/IMG_0692.jpg" class="image">
-										<img src="images/gallery/IMG_0692 1.jpg" alt="" />
+									<a href="images/gallery/IMG_cat.jpg" class="image">
+										<img src="images/gallery/IMG_cat.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Tabby Cat</h3>
