fix img slide error

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/IMG_5727.jpg" class="image">
-										<img src="images/gallery/IMG_5727.jpg" alt="" />
+									<a href="images/gallery/IMG_tiger.jpg" class="image">
+										<img src="images/gallery/IMG_tiger.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Tiger</h3>
@@ -148,8 +148,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/IMG_4990.jpg" class="image">
-										<img src="images/gallery/IMG_4990.jpg" alt="" />
+									<a href="images/gallery/IMG_lotus.jpg" class="image">
+										<img src="images/gallery/IMG_lotus.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Lotus</h3>
@@ -161,8 +161,8 @@
 								</article>
 								
 								<article>
-									<a href="images/gallery/IMG_7348.jpg" class="image">
-										<img src="images/gallery/IMG_7348.jpg" alt="" />
+									<a href="images/gallery/IMG_redFlower.jpg" class="image">
+										<img src="images/gallery/IMG_redFlower.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Flowers</h3>
@@ -173,8 +173,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/IMG_7776.jpg" class="image">
-										<img src="images/gallery/IMG_7776.jpg" alt="" />
+									<a href="images/gallery/IMG_4leaf.jpg" class="image">
+										<img src="images/gallery/IMG_4leaf.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Four-Leaf Clover</h3>
@@ -185,8 +185,8 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/IMG_8986.jpg" class="image">
-										<img src="images/gallery/IMG_8986.jpg" alt="" />
+									<a href="images/gallery/IMG_rain.jpg" class="image">
+										<img src="images/gallery/IMG_rain.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>After Rain</h3>
